fix: fix background shape overflow issue

--- a/styles/app/landing.module.css
+++ b/styles/app/landing.module.css
@@ -1,8 +1,12 @@
 
+#landing {
+    min-height: calc(100vh - 25em);
+}
+
 #mainLogo {
     font-family: 'Otomanopee One', sans-serif;
     font-size: 70px;
-    padding-top: 130px;
+    padding-top: 110px;
     text-align: center;
 }
 
