--- a/styles/layouts/footer.module.css
+++ b/styles/layouts/footer.module.css
@@ -1,10 +1,10 @@
 
 #footer {
     align-items: center;
-    bottom: -20em;
+    bottom: -15em;
     display: flex;
-    height: 4em;
-    position: absolute;
+    height: 3em;
+    position: relative;
     justify-content: center;
     width: 100vw;
 }
@@ -15,7 +15,12 @@
 
 @media only screen and (max-width: 767.98px) {
     #copyright {
-        font-size: 20px;
+        font-size: 17px;
+    }
+
+    #footer {
+        align-items: center;
+        bottom: -13em;
     }
 }
 
